--- a/myapp/templates/deployment.yaml
+++ b/myapp/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 3000
+              containerPort:{{.Values.Port }}
               protocol: TCP
           {{- with .Values.livenessProbe }}
           livenessProbe:
