--- a/myapp/values.yaml
+++ b/myapp/values.yaml
@@ -89,10 +89,10 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /
-    port: http
+    port: 3000
 readinessProbe:
   httpGet:
-    path: /
+    path: 3000
     port: http
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
