--- a/myapp/values.yaml
+++ b/myapp/values.yaml
@@ -92,8 +92,8 @@ livenessProbe:
     port: 3000
 readinessProbe:
   httpGet:
-    path: 3000
-    port: http
+    path: /
+    port: 3000
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
